layout issue fix

--- a/layouts/layout3.css
+++ b/layouts/layout3.css
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     width: 30%;
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
     height: 900px;
     background-color: aquamarine;
 }
@@ -28,11 +28,12 @@ h1{
 }
 @media (max-width:500px) {
     .container{
-        flex-direction: column;
+        flex-wrap: wrap;
     }
     .left,.right{
         width: 100%;
-        height: auto;
+        /* flex-grow: 1; */
+        height: 50vh;
     }
     .right{
         margin-top: 20px;
