--- a/layouts/layout6.css
+++ b/layouts/layout6.css
@@ -1,14 +1,16 @@
 header {
     display: flex;
     justify-content: flex-end;
-    margin: 0 20px 0 20px;
+    /* margin: 0 20px 0 20px; */
     background-color: #9390AF;
     height: 80px;
 }
 
+
 * {
     font-family: 'Roboto', sans-serif;
     list-style: none;
+    margin: 0;
 }
 
 li {
@@ -21,6 +23,7 @@ li {
 
 .menu {
     padding-right: 20px;
+    padding-top: 20px;
 }
 
 .logo {
